@@ -71,5 +71,6 @@
 #endif
 
 #if defined(USE_GNU_GLOB)
+#include "misc/fnmatch.c"
 #include "misc/glob.c"
 #endif
